# identify_xscalar_issue

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  parse_results.py  run_all_benchmarks.sh  run_bench.sh  run_vtune_analysis.sh
docs/: BENCHMARK_REPORT.md
docs/reports/: ISSUE_001_xsimd_svector_overhead.md
performance_reports/: ISSUE_001_xsimd_svector_overhead.md
scripts/: build.sh  parse_results.py  run_all_benchmarks.sh  run_bench.sh  run_vtune_analysis.sh
src/: bench_xscalar.cpp
